# Operating_Systems_2025_Task3

./: CMakeLIsts.txt  CMakeLists.txt  build_and_run.cmd
include/: counter.h  logger.h
src/: child_program_1.cpp  child_program_2.cpp  counter.cpp  logger.cpp  main.cpp
